# emotions-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
