[package]
name = "emotions"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Emotions from [`Emotion Wheel`](https://observablehq.com/@mbostock/emotion-wheel) available as a rust crate."
repository = "https://github.com/abhillman/emotions-rs"
readme = "README.md"
keywords = ["emotions", "feelings"]
